--- a/src/output.css
+++ b/src/output.css
@@ -566,12 +566,12 @@ video {
   bottom: 40px;
 }
 
-.left-\[-30px\] {
-  left: -30px;
+.left-0 {
+  left: 0px;
 }
 
-.left-\[150px\] {
-  left: 150px;
+.left-\[-30px\] {
+  left: -30px;
 }
 
 .left-\[605px\] {
@@ -610,16 +610,36 @@ video {
   top: 50px;
 }
 
-.right-\[0px\] {
-  right: 0px;
+.left-\[30px\] {
+  left: 30px;
+}
+
+.left-\[590px\] {
+  left: 590px;
+}
+
+.left-\[580px\] {
+  left: 580px;
 }
 
 .right-0 {
   right: 0px;
 }
 
-.right-\[-100px\] {
-  right: -100px;
+.top-\[\] {
+  top: ;
+}
+
+.top-\[200px\] {
+  top: 200px;
+}
+
+.top-\[250px\] {
+  top: 250px;
+}
+
+.top-\[300px\] {
+  top: 300px;
 }
 
 .z-10 {
@@ -643,16 +663,16 @@ video {
   margin-bottom: 30px;
 }
 
-.ml-\[10\%\] {
-  margin-left: 10%;
-}
-
 .mt-\[30px\] {
   margin-top: 30px;
 }
 
 .mt-\[60px\] {
   margin-top: 60px;
+}
+
+.mb-\[20px\] {
+  margin-bottom: 20px;
 }
 
 .flex {
@@ -667,6 +687,30 @@ video {
   display: none;
 }
 
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[130px\] {
+  height: 130px;
+}
+
+.h-\[170px\] {
+  height: 170px;
+}
+
+.h-\[30px\] {
+  height: 30px;
+}
+
+.h-\[50px\] {
+  height: 50px;
+}
+
+.h-\[547px\] {
+  height: 547px;
+}
+
 .w-\[100\%\] {
   width: 100%;
 }
@@ -679,32 +723,60 @@ video {
   width: 170px;
 }
 
-.w-\[30\%\] {
-  width: 30%;
-}
-
 .w-\[300px\] {
   width: 300px;
-}
-
-.w-\[50\%\] {
-  width: 50%;
 }
 
 .w-\[85\%\] {
   width: 85%;
 }
 
-.w-\[90\%\] {
-  width: 90%;
+.w-\[1246px\] {
+  width: 1246px;
+}
+
+.w-\[180px\] {
+  width: 180px;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[240px\] {
+  width: 240px;
+}
+
+.w-\[270px\] {
+  width: 270px;
+}
+
+.w-\[430px\] {
+  width: 430px;
+}
+
+.w-\[515px\] {
+  width: 515px;
+}
+
+.w-\[528px\] {
+  width: 528px;
+}
+
+.w-\[529px\] {
+  width: 529px;
+}
+
+.w-\[700px\] {
+  width: 700px;
+}
+
+.w-\[740px\] {
+  width: 740px;
 }
 
 .grow {
   flex-grow: 1;
-}
-
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-rows-2 {
@@ -729,6 +801,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-\[100px\] {
+  gap: 100px;
 }
 
 .gap-\[10px\] {
@@ -771,24 +847,20 @@ video {
   gap: 80px;
 }
 
-.gap-\[100px\] {
-  gap: 100px;
-}
-
-.overflow-auto {
-  overflow: auto;
+.gap-\[200px\] {
+  gap: 200px;
 }
 
 .overflow-hidden {
   overflow: hidden;
 }
 
-.text-clip {
-  text-overflow: clip;
-}
-
 .rounded-\[30px\] {
   border-radius: 30px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-b-2 {
@@ -822,6 +894,11 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
 }
 
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity, 1));
+}
+
 .bg-\[\#1D1E25\] {
   --tw-bg-opacity: 1;
   background-color: rgb(29 30 37 / var(--tw-bg-opacity, 1));
@@ -832,8 +909,30 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
-.p-\[100px\] {
-  padding: 100px;
+.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.p-\[130px\] {
+  padding: 130px;
+}
+
+.p-\[20px\] {
+  padding: 20px;
+}
+
+.p-\[40px\] {
+  padding: 40px;
+}
+
+.p-\[90px\] {
+  padding: 90px;
 }
 
 .px-\[100px\] {
@@ -844,11 +943,6 @@ video {
 .px-\[50px\] {
   padding-left: 50px;
   padding-right: 50px;
-}
-
-.px-\[80px\] {
-  padding-left: 80px;
-  padding-right: 80px;
 }
 
 .py-\[100px\] {
@@ -876,6 +970,11 @@ video {
   padding-bottom: 30px;
 }
 
+.py-\[40px\] {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
 .py-\[50px\] {
   padding-top: 50px;
   padding-bottom: 50px;
@@ -891,19 +990,9 @@ video {
   padding-bottom: 80px;
 }
 
-.py-\[\] {
-  padding-top: ;
-  padding-bottom: ;
-}
-
-.py-\[40px\] {
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
-.py-\[100\] {
-  padding-top: 100;
-  padding-bottom: 100;
+.px-\[60px\] {
+  padding-left: 60px;
+  padding-right: 60px;
 }
 
 .pb-\[5px\] {
@@ -916,10 +1005,6 @@ video {
 
 .pl-\[100px\] {
   padding-left: 100px;
-}
-
-.pr-\[100px\] {
-  padding-right: 100px;
 }
 
 .pt-\[100px\] {
@@ -975,6 +1060,10 @@ video {
   font-size: 40px;
 }
 
+.text-\[50px\] {
+  font-size: 50px;
+}
+
 .text-\[56px\] {
   font-size: 56px;
 }
@@ -983,32 +1072,20 @@ video {
   font-size: 64px;
 }
 
+.text-\[25px\] {
+  font-size: 25px;
+}
+
 .text-\[70px\] {
   font-size: 70px;
-}
-
-.text-\[80px\] {
-  font-size: 80px;
-}
-
-.text-\[50px\] {
-  font-size: 50px;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
-.leading-\[120px\] {
-  line-height: 120px;
-}
-
 .leading-\[65px\] {
   line-height: 65px;
-}
-
-.leading-\[70px\] {
-  line-height: 70px;
 }
 
 .tracking-\[2px\] {
@@ -1035,16 +1112,28 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
+}
+
 .text-\[\] {
   color: ;
 }
 
-.text-\[30PX\] {
-  color: 30PX;
+.text-\[gray\] {
+  --tw-text-opacity: 1;
+  color: rgb(128 128 128 / var(--tw-text-opacity, 1));
 }
 
-.text-\[30\] {
-  color: 30;
+.text-\[white\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#848892\] {
+  --tw-text-opacity: 1;
+  color: rgb(132 136 146 / var(--tw-text-opacity, 1));
 }
 
 .outline-none {
@@ -1053,6 +1142,14 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:left-\[150px\] {
+    left: 150px;
+  }
+
+  .sm\:ml-\[10\%\] {
+    margin-left: 10%;
+  }
+
   .sm\:block {
     display: block;
   }
@@ -1061,12 +1158,12 @@ video {
     display: flex;
   }
 
-  .sm\:w-\[50\%\] {
-    width: 50%;
-  }
-
   .sm\:w-\[30\%\] {
     width: 30%;
+  }
+
+  .sm\:w-\[50\%\] {
+    width: 50%;
   }
 
   .sm\:w-\[90\%\] {
@@ -1081,6 +1178,10 @@ video {
     flex-direction: row;
   }
 
+  .sm\:items-center {
+    align-items: center;
+  }
+
   .sm\:gap-\[0px\] {
     gap: 0px;
   }
@@ -1089,8 +1190,9 @@ video {
     gap: 50px;
   }
 
-  .sm\:overflow-auto {
-    overflow: auto;
+  .sm\:px-\[80px\] {
+    padding-left: 80px;
+    padding-right: 80px;
   }
 
   .sm\:py-\[0px\] {
@@ -1098,33 +1200,40 @@ video {
     padding-bottom: 0px;
   }
 
-  .sm\:px-\[80px\] {
-    padding-left: 80px;
-    padding-right: 80px;
+  .sm\:pl-\[0px\] {
+    padding-left: 0px;
   }
 
   .sm\:pr-\[100px\] {
     padding-right: 100px;
   }
 
-  .sm\:pl-\[0px\] {
-    padding-left: 0px;
-  }
-
   .sm\:text-left {
     text-align: left;
   }
 
-  .sm\:text-\[80px\] {
-    font-size: 80px;
+  .sm\:text-\[30px\] {
+    font-size: 30px;
+  }
+
+  .sm\:text-\[40px\] {
+    font-size: 40px;
   }
 
   .sm\:text-\[56px\] {
     font-size: 56px;
   }
 
-  .sm\:text-\[40px\] {
-    font-size: 40px;
+  .sm\:text-\[70px\] {
+    font-size: 70px;
+  }
+
+  .sm\:text-\[80px\] {
+    font-size: 80px;
+  }
+
+  .sm\:text-\[18px\] {
+    font-size: 18px;
   }
 
   .sm\:leading-\[120px\] {
